# basis_SFML

./: CMakeLists.txt  main.cpp  one_variable_function.h  scale.h
